--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "nodemon": "^3.1.9"
   },
   "scripts": {
-    "dev": "nodemon src/app.js"
+    "dev": "nodemon server.js"
   },
   "type": "module"
 
