--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
@@ -9,5 +10,4 @@
     "dev": "nodemon server.js"
   },
   "type": "module"
-
 }
