--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "nodemon": "^3.1.9"
   },
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon ./src/server.js"
   },
   "type": "module"
 }
